# gcc-create-library

./: .gitignore  README.md  meson.build  run-meson-dynamic.sh  run-meson-shared.sh  run-meson-static.sh  run-steps.sh
src/: dynamic-library-loader.c  main.c  meson.build  tq84.h
src/tq84/: meson.build
steps/: LD_DEBUG  cleanup  create-dynamic-library-loader  create-object-files  create-shared-library  create-soname-library  create-static-library  install-soname-library  link-dynamically  link-soname-library  link-statically  list-symbols  move-shared-object  readelf-relocs  show-difference-PIC  use-shared-library-LD_LIBRARY_PATH  use-shared-library-no-LD_LIBRARY_PATH
