runtime_sources = ['add.c', 'add.h', 'answer.c', 'answer.h']

tq84_lib_static = static_library('runtime',
                            runtime_sources,
                            install : true)

tq84_lib_shared = shared_library('runtime',
                            runtime_sources,
                            install : true)
